[gd_scene load_steps=5 format=2]

[ext_resource path="res://EconPhase/Summary/SummaryContents.gd" type="Script" id=1]
[ext_resource path="res://Fonts/IndepModern.tres" type="DynamicFont" id=2]
[ext_resource path="res://Utility/TitleAmount.tscn" type="PackedScene" id=3]
[ext_resource path="res://Utility/HorizontalRuler.tscn" type="PackedScene" id=4]

[node name="SummaryContents" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 10.0
margin_right = -32.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 292.0
margin_bottom = 470.0

[node name="SectionTitle2" type="Label" parent="VBoxContainer"]
margin_right = 292.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.882353, 0.745098, 1 )
text = "Income"
align = 1

[node name="ColonyCp" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 27.0
margin_right = 292.0
margin_bottom = 59.0
title = "Colony CPs"
postfix = " CP"

[node name="MineralCp" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 63.0
margin_right = 292.0
margin_bottom = 95.0
title = "Mineral CPs"
postfix = " CP"

[node name="HorizontalRuler" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 99.0
margin_right = 292.0
margin_bottom = 107.0

[node name="SectionTitle3" type="Label" parent="VBoxContainer"]
margin_top = 111.0
margin_right = 292.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.882353, 0.745098, 1 )
text = "Expenses"
align = 1

[node name="Maintance" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 138.0
margin_right = 292.0
margin_bottom = 170.0
title = "Maintance"
postfix = " CP"

[node name="TurnOrder" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 174.0
margin_right = 292.0
margin_bottom = 206.0
title = "Turn Order Bid"
postfix = " CP"

[node name="HorizontalRuler2" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 210.0
margin_right = 292.0
margin_bottom = 218.0

[node name="SectionTitle" type="Label" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 292.0
margin_bottom = 245.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.882353, 0.745098, 1 )
text = "Spending"
align = 1

[node name="Expenses" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 249.0
margin_right = 292.0
margin_bottom = 281.0
custom_constants/separation = 8
alignment = 1

[node name="TechSpending" parent="VBoxContainer/Expenses" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 136.0
margin_bottom = 32.0
size_flags_horizontal = 3
title = "Technology"

[node name="ShipSpending" parent="VBoxContainer/Expenses" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 292.0
margin_bottom = 32.0
size_flags_horizontal = 3
title = "Space Ships"

[node name="HorizontalRuler3" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 285.0
margin_right = 292.0
margin_bottom = 293.0

[node name="RemainingCp" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 297.0
margin_right = 292.0
margin_bottom = 329.0
title = "Remaining CPs"
postfix = " CP"

[node name="HorizontalRuler4" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 333.0
margin_right = 292.0
margin_bottom = 341.0

[node name="SectionTitle4" type="Label" parent="VBoxContainer"]
margin_top = 345.0
margin_right = 292.0
margin_bottom = 368.0
custom_fonts/font = ExtResource( 2 )
text = "Continue to next Phase?"
align = 1

[node name="DoneWithEconPhase" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 372.0
margin_right = 292.0
margin_bottom = 401.0
alignment = 1

[node name="DoneButton" type="Button" parent="VBoxContainer/DoneWithEconPhase"]
margin_left = 71.0
margin_right = 221.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Done"

[connection signal="button_up" from="VBoxContainer/DoneWithEconPhase/DoneButton" to="." method="_on_Done_button_up"]
